generator client {
  provider = "prisma-client-js"
  output   = "./generated/prisma/client"
}

datasource db {
  provider = "postgresql"
}

model audit_logs {
  id        Int      @id @default(autoincrement())
  action    String
  entity    String
  entityId  String?
  userId    Int?
  userEmail String?
  userName  String?
  ipAddress String?
  userAgent String?
  changes   Json?
  metadata  Json?
  status    String   @default("SUCCESS")
  errorMsg  String?
  createdAt DateTime @default(now())

  @@index([action])
  @@index([createdAt])
  @@index([entity, entityId])
  @@index([userId])
}

model backup_history {
  id          Int       @id @default(autoincrement())
  backupType  String
  fileName    String
  filePath    String
  fileSize    BigInt?
  status      String
  startedAt   DateTime
  completedAt DateTime?
  errorMsg    String?
  metadata    Json?

  @@index([backupType, status])
  @@index([startedAt])
}

model budget_adjustment_requests {
  id                                                  Int         @id @default(autoincrement())
  departmentId                                        Int
  reason                                              String
  requestType                                         String
  requestedAmount                                     Decimal     @db.Decimal(15, 2)
  requestedAt                                         DateTime    @default(now())
  requestedBy                                         Int
  reviewNotes                                         String?
  reviewedAt                                          DateTime?
  reviewedBy                                          Int?
  status                                              String      @default("pending")
  targetMonth                                         Int
  targetYear                                          Int
  department                                          departments @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  requester                                           users       @relation("budget_adjustment_requests_requestedByTousers", fields: [requestedBy], references: [id], onDelete: Cascade)
  reviewer                                            users?      @relation("budget_adjustment_requests_reviewedByTousers", fields: [reviewedBy], references: [id])

  @@index([departmentId, status])
  @@index([status, requestedAt])
}

model budget_predictions {
  id                Int          @id @default(autoincrement())
  departmentId      Int?
  aiInsights        String
  algorithm         String
  categoryBreakdown Json?
  comparisonData    Json?
  confidence        String
  createdAt         DateTime     @default(now())
  predictedAmount   Decimal      @db.Decimal(15, 2)
  targetMonth       Int
  targetYear        Int
  triggerType       String
  triggeredBy       Int?
  department        departments? @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  triggeredByUser   users?       @relation(fields: [triggeredBy], references: [id])

  @@index([createdAt])
  @@index([departmentId])
  @@index([targetYear, targetMonth])
  @@index([triggeredBy])
}

model chat_messages {
  id                  Int                   @id @default(autoincrement())
  sessionId           String
  role                String
  content             String
  metadata            Json?
  createdAt           DateTime              @default(now())
  chat_sessions       chat_sessions         @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  message_attachments message_attachments[]

  @@index([createdAt])
  @@index([sessionId])
}

model chat_sessions {
  id            String          @id
  userId        Int
  title         String?
  createdAt     DateTime        @default(now())
  updatedAt     DateTime @default(now())
  chat_messages chat_messages[]
  users         users           @relation(fields: [userId], references: [id], onDelete: Cascade)
  sources       sources[]

  @@index([createdAt])
  @@index([userId])
}

model departments {
  id                         Int                          @id @default(autoincrement())
  code                       String                       @unique
  name                       String
  description                String?
  isActive                   Boolean                      @default(true)
  createdAt                  DateTime                     @default(now())
  updatedAt                  DateTime    @default(now())
  budget_adjustment_requests budget_adjustment_requests[]
  budget_predictions         budget_predictions[]
  budget_upcoming_events     budget_upcoming_events[]
  monthly_budgets            monthly_budgets[]

  @@index([code])
  @@index([isActive])
}

model budget_upcoming_events {
  id              Int         @id @default(autoincrement())
  departmentId    Int
  title           String
  targetYear      Int
  targetMonth     Int
  estimatedImpact Decimal     @db.Decimal(15, 2)
  likelihood      String      @default("medium")
  notes           String?
  status          String      @default("active")
  createdBy       Int
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt
  department      departments @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  creator         users       @relation(fields: [createdBy], references: [id], onDelete: Cascade)

  @@index([departmentId, targetYear, targetMonth])
  @@index([createdBy])
  @@index([status])
}

model feedbacks {
  id           Int      @id @default(autoincrement())
  userId       Int
  type         String
  description  String
  status       String   @default("OPEN")
  adminComment String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @default(now())
  users        users    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([status, createdAt])
  @@index([userId, createdAt])
}

model message_attachments {
  id            String        @id
  messageId     Int
  fileName      String
  fileUrl       String
  fileType      String
  fileSize      Int
  mimeType      String?
  thumbnailUrl  String?
  aiAnalysis    String?
  uploadedAt    DateTime      @default(now())
  metadata      Json?
  chat_messages chat_messages @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@index([messageId])
  @@index([uploadedAt])
}

model monthly_budgets {
  id                    Int         @id @default(autoincrement())
  departmentId          Int
  allocatedAmount       Decimal     @db.Decimal(15, 2)
  createdAt             DateTime    @default(now())
  month                 Int
  notes                 String?
  reservedAmount        Decimal     @default(0) @db.Decimal(15, 2)
  spentAmount           Decimal     @default(0) @db.Decimal(15, 2)
  updatedAt             DateTime    @default(now())
  year                  Int
  lastNotifiedThreshold Int         @default(0)
  department            departments @relation(fields: [departmentId], references: [id], onDelete: Cascade)

  @@unique([departmentId, year, month])
  @@index([departmentId])
  @@index([year, month])
}

model notifications {
  id        Int       @id @default(autoincrement())
  userId    Int
  title     String
  message   String
  type      String    @default("INFO")
  channel   String    @default("IN_APP")
  refType   String?
  refId     String?
  isRead    Boolean   @default(false)
  createdAt DateTime  @default(now())
  readAt    DateTime?
  users     users     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([createdAt])
  @@index([userId, isRead])
}

model password_reset_codes {
  id        Int       @id @default(autoincrement())
  userId    Int
  email     String
  codeHash  String
  salt      String
  attempts  Int       @default(0)
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())
  users     users     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([createdAt])
  @@index([email])
  @@index([expiresAt])
  @@index([userId])
}

model purchase_order_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model purchase_request_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model purchasing_lookups {
  id        Int      @id @default(autoincrement())
  kind      String
  value     String
  createdAt DateTime @default(now())

  @@unique([kind, value])
  @@index([kind])
}

model role_change_audits {
  id         Int      @id @default(autoincrement())
  targetId   Int
  fromRole   String
  toRole     String
  actorEmail String
  actorName  String?
  createdAt  DateTime @default(now())
  users      users    @relation(fields: [targetId], references: [id], onDelete: Cascade)

  @@index([createdAt])
  @@index([targetId])
}

model source_chunks {
  id         String  @id
  sourceId   String
  content    String
  chunkIndex Int
  sources    sources @relation(fields: [sourceId], references: [id], onDelete: Cascade)

  @@index([sourceId])
}

model sources {
  id            String          @id
  userId        Int
  sessionId     String?
  fileName      String
  filePath      String
  fileType      String
  fileSize      Int
  uploadedAt    DateTime        @default(now())
  source_chunks source_chunks[]
  chat_sessions chat_sessions?  @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  users         users           @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([sessionId])
  @@index([uploadedAt])
  @@index([userId])
}

model supplier_delivery_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model supplier_grn_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model supplier_invoice_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model supplier_payment_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model supplier_inventory_items {
  id           String   @id
  supplierId   Int
  itemName     String
  category     String
  quantity     Int
  reservedQuantity Int   @default(0)
  reorderLevel Int      @default(0)
  unit         String
  unitPrice    Float
  imageDataUrl String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @default(now())
  users        users    @relation(fields: [supplierId], references: [id], onDelete: Cascade)

  @@index([category])
  @@index([supplierId])
  @@index([updatedAt])
}

model supplier_order_acknowledgement_records {
  localId   String   @id
  payload   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@index([createdAt])
  @@index([updatedAt])
}

model users {
  id                                                                       Int                          @id @default(autoincrement())
  name                                                                     String?
  email                                                                    String                       @unique
  password                                                                 String
  role                                                                     String                       @default("Employee")
  avatarUrl                                                                String?
  department                                                               String?
  isActive                                                                 Boolean                      @default(true)
  preferredLanguage                                                        Language                     @default(en)
  budget_adjustment_requests_budget_adjustment_requests_requestedByTousers budget_adjustment_requests[] @relation("budget_adjustment_requests_requestedByTousers")
  budget_adjustment_requests_budget_adjustment_requests_reviewedByTousers  budget_adjustment_requests[] @relation("budget_adjustment_requests_reviewedByTousers")
  budget_predictions                                                       budget_predictions[]
  budget_upcoming_events                                                   budget_upcoming_events[]
  chat_sessions                                                            chat_sessions[]
  feedbacks                                                                feedbacks[]
  notifications                                                            notifications[]
  password_reset_codes                                                     password_reset_codes[]
  role_change_audits                                                       role_change_audits[]
  sources                                                                  sources[]
  supplier_inventory_items                                                 supplier_inventory_items[]
  supplier_bank_details                                                     supplier_bank_details?
  supplier_tax_settings                                                     supplier_tax_settings?
}

model supplier_bank_details {
  supplierId    Int      @id
  bankName      String?
  accountName   String?
  accountNumber String?
  updatedAt     DateTime @default(now())
  users         users    @relation(fields: [supplierId], references: [id], onDelete: Cascade)
}

model supplier_tax_settings {
  supplierId  Int      @id
  taxApplies  Boolean  @default(false)
  taxType     String   @default("NO_TAX")
  taxRate     Float    @default(0)
  taxRules    Json?
  updatedAt   DateTime @updatedAt
  users       users    @relation(fields: [supplierId], references: [id], onDelete: Cascade)
}

enum Language {
  en
  zh
  ms
}
